# string-formatter

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: CMakeLists.txt
lib/include/: fmt.h
lib/src/: fmt.c
test/: main.c
